--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=g45502.atl.asciipaint.main.AsciiPaint
+main.class=g45502.atl.asciipaint.model.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
